@@ -11,11 +11,7 @@ import de.adorsys.datasafe.types.api.actions.RemoveRequest;
 import de.adorsys.datasafe.types.api.actions.WriteRequest;
 import de.adorsys.datasafe.types.api.resource.BasePrivateResource;
 import de.adorsys.datasafe.types.api.resource.PrivateResource;
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiParam;
-import io.swagger.annotations.ApiResponse;
-import io.swagger.annotations.ApiResponses;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
@@ -29,7 +25,6 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 
-import javax.servlet.http.HttpServletResponse;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.util.List;
@@ -48,7 +43,6 @@ import static org.springframework.http.MediaType.MULTIPART_FORM_DATA_VALUE;
 @Slf4j
 @RestController
 @RequiredArgsConstructor
-@Api(description = "Operations with inbox")
 public class InboxController {
 
     private final DefaultDatasafeServices dataSafeService;
@@ -57,12 +51,7 @@ public class InboxController {
      * Sends file to multiple users' INBOX.
      */
     @SneakyThrows
-    @PutMapping(value = "/inbox/document/{path:.*}", consumes = MULTIPART_FORM_DATA_VALUE)
-    @ApiOperation("Send document to inbox")
-    @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "Document was successfully sent"),
-            @ApiResponse(code = 403, message = "Access denied")
-    })
+    @PutMapping(value = "/inbox/document/{*path}", consumes = MULTIPART_FORM_DATA_VALUE)
     public void writeToInbox(@RequestHeader Set<String> users,
                              @PathVariable String path,
                              @RequestParam("file") MultipartFile file) {
@@ -78,12 +67,7 @@ public class InboxController {
      * Reads file from users' INBOX.
      */
     @SneakyThrows
-    @GetMapping(value = "/inbox/document/{path:.*}", produces = APPLICATION_OCTET_STREAM_VALUE)
-    @ApiOperation("Read document from inbox")
-    @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "Document was successfully read"),
-            @ApiResponse(code = 404, message = "Document not found")
-    })
+    @GetMapping(value = "/inbox/document/{*path}", produces = APPLICATION_OCTET_STREAM_VALUE)
     public void readFromInbox(@RequestHeader String user,
                               @RequestHeader String password,
                               @PathVariable String path,
@@ -103,11 +87,7 @@ public class InboxController {
     /**
      * Deletes file from users' INBOX.
      */
-    @DeleteMapping("/inbox/document/{path:.*}")
-    @ApiOperation("Delete document from inbox")
-    @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "Document successfully deleted")
-    })
+    @DeleteMapping("/inbox/document/{*path}")
     public void deleteFromInbox(@RequestHeader String user,
                                 @RequestHeader String password,
                                 @PathVariable String path) {
@@ -121,15 +101,9 @@ public class InboxController {
     /**
      * list files in users' INBOX.
      */
-    @GetMapping(value = "/inbox/documents/{path:.*}", produces = APPLICATION_JSON_VALUE)
-    @ApiOperation("List files in inbox")
-    @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "List command successfully completed"),
-            @ApiResponse(code = 401, message = "Unauthorised")
-    })
+    @GetMapping(value = "/inbox/documents/{*path}", produces = APPLICATION_JSON_VALUE)
     public List<String> listInbox(@RequestHeader String user,
                                   @RequestHeader String password,
-                                  @ApiParam(defaultValue = ".")
                                   @PathVariable(required = false) String path) {
         UserIDAuth userIDAuth = new UserIDAuth(new UserID(user), ReadKeyPasswordHelper.getForString(password));
         path = Optional.ofNullable(path)
@@ -138,7 +112,7 @@ public class InboxController {
         try {
             List<String> inboxList = dataSafeService.inboxService().list(ListRequest.forDefaultPrivate(userIDAuth, path))
                     .map(e -> e.getResource().asPrivate().decryptedPath().asString())
-                    .collect(Collectors.toList());
+                    .toList();
             log.debug("User's {} inbox contains {} items", user, inboxList.size());
             return inboxList;
         } catch (AmazonS3Exception e) { // for list this exception most likely means that user credentials wrong
